--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RJ & Jeff | Adobtion Site</title>
+    <title>RJ & Jeff | 2017 Adoption Site</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />    
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-	<script src="https://use.typekit.net/mzh7vlh.js"></script>
-	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script src="https://use.typekit.net/mzh7vlh.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
 
   <body>
