--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,43 +2,43 @@
 <div id="wrapper" class="divided">
 
 	<!-- DEAR LETTER -->
-	<section id="letter" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+	<section class="banner style1 orient-left content-align-left image-position-right  onload-image-fade-in onload-content-fade-right">
 		<div class="content">
 			<h1>Dear Expectant Parent(s),</h1>
 			<p class="major">Thank you for reading about us! We are RJ & Jeff. We have yet to meet you, but we admire your strength, bravery, and courage by considering an adoption plan. We are a fun, loving, and energetic couple who are very excited about being dads. We know that this decision is not easy, but no matter what you choose, we wish you, your child, and your families the best. Thank you for taking the time to learn more about our family.</p>
 			<div class="signature">
-				<img src="<%= asset_path 'signature.png' %>", width="40%">
+				<img src="<%= asset_path 'signature.png' %>", width="30%">
 			</div>
 		</div>
 		<div class="image">
-		<img src="<%= asset_path 'jr-lake.jpg' %>" alt="" />
+		<img src="<%= asset_path 'jr-lake4.jpg' %>" alt="" />
 		</div>
 	</section>
 
 	<!-- MEET RJ -->
-	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+	<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-out shade" id="first">
 		<div class="content">
 			<h2>MEET R.J.</h2>
 			<p>I was born and raised in <a href="https://www.google.com/maps/place/Saginaw,+MI/@43.4249463,-84.0187644,12z/data=!3m1!4b1!4m5!3m4!1s0x8823c24186e758af:0x29e3946d7baef5ac!8m2!3d43.4194699!4d-83.9508068" target="_blank">Saginaw, Michigan</a>. I grew up in a small, loving family with one older sister, whom we see regularly now with her husband and their two children. As a child, I loved playing outside with neighborhood kids, swimming in the local pool, and doing outdoor activities with my dad. We would often go fishing, boating, do gardening and go on nature walks. After graduating from Michigan State, I moved to Chicago, where I finished my graduate degree in public health from the University of Illinois at Chicago. I work as a health research analyst for Walgreens and am a self-proclaimed nerd because of my love of organization, computers, and all things technology. In my free time, I enjoy cooking, all kinds of music, gardening, working around the house, and spending time with family, friends, and our dogs.</p>
 		</div>
 		<div class="image">
-			<img src="<%= asset_path 'rj-ashton.jpg' %>" alt="" />
+			<img src="<%= asset_path 'rj1.jpg' %>" alt="" />
 		</div>
 	</section>
 
 	<!-- MEET JEFF -->
-	<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+	<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in">
 		<div class="content">
 			<h2>MEET JEFF</h2>
 			<p>I was born and raised in <a href="https://www.google.com/maps/place/Darien,+IL/@41.7399831,-88.0227399,13z/data=!3m1!4b1!4m5!3m4!1s0x880e456168c0548d:0x4c73d0df2621ef7c!8m2!3d41.7483483!4d-87.9737943" target="_blank">Darien, Illinois</a>. I am the youngest of three brothers in a very lively Polish and Italian family. Growing up, I enjoyed playing brothers and friends, sports, and cooking with my Italian grandparents. After graduating from Eastern Illinois University, I moved back to Chicago to be close to my family, who all live nearby. I currently work as a senior director of client services for ADP (a payroll company). In my free time, I enjoy running, biking, being outdoors, watching all the Oscar nominated movies and spending as much time as possible with family, friends and our dogs.</p>
 		</div>
 		<div class="image">
-			<img src="<%= asset_path 'jeff.jpg' %>" alt="" />
+			<img src="<%= asset_path 'jeff4.jpg' %>" alt="" />
 		</div>
 	</section>
 
 	<!-- ABOUT US -->
-	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+	<section id="shade" class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 		<div class="content">
 			<h2>ABOUT US</h2>
 			<p>We met on Caribbean vacation over eight years ago. We became friends instantly and started dating more than five years ago. Our first date was at the dog beach, with our dogs, Mister and Russell. Since then, we discovered we had a lot in common. We both love to travel, to cook (and eat), and we enjoy all the things the city has to offer. We also have similar values and shared aspirations of creating a family. We enjoy exploring the city’s parks and beaches with our dogs.  After a short time together, we fell in love. We have been together now for over five years, and we recently celebrated our one year wedding  anniversary.</p>
@@ -58,12 +58,12 @@
 				Our families are both very excited to welcome a precious baby into our world, and can’t wait for him or her to be a part of our family.</p>
 			</div>
 			<div class="image">
-				<img src="<%= asset_path 'family.jpg' %>" alt="" />
+				<img src="<%= asset_path 'family3.jpg' %>" alt="" />
 			</div>
 		</section>					
 
 		<!-- ABOUT ADOPTION -->
-		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+		<section id="shade" class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 			<div class="content">
 				<h2>ABOUT ADOPTION</h2>
 				<p>RJ’s mom, Dorothy, was very influential in our decision to pursue an open adoption. She placed a child for adoption before my sister and I were born. At that time, adoptions were primarily closed and my mom never had an opportunity to discover anything about her son.  While she always knew she had made the right choice, she wished she had the chance to learn more about him.  This personal adoption experience has made us strong believers in open adoption, and the level of comfort and understanding it allows.    Sadly, Dorothy died last year and was never able to find him. However, I am hopeful that someday I will find my half-brother and tell him what a wonderful woman my mom was, and how much she cared for him in making an adoption plan.</p>
@@ -76,16 +76,17 @@
 		<!-- OUR NEIGHBORHOOD -->
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 			<div class="content">
+				<img src="<%= asset_path 'skyline.svg' %>", width="60%">
 				<h2>OUR NEIGHBORHOOD</h2>
 				<p>We love our lives in Chicago and live in a very diverse neighborhood on the north side. We have a lot of family and friends in the city and we enjoy spending as much time with them as possible. Since Jeff’s family is all nearby, we get together with them for family dinners on a weekly basis. We care very much about our friends, who make up a diverse group and many of whom now have children of their own. Living in Chicago provides us with such great opportunities and the ability to have enriching, fun, child-friendly experiences with kids all the time.</p>
 			</div>
 			<div class="image">
-				<img src="<%= asset_path 'neighborhood.jpg' %>" alt="" />
+				<img src="<%= asset_path 'neighborhood2.jpg' %>" alt="" />
 			</div>
 		</section>
 
 		<!-- OUR PROMISE -->
-		<section class="wrapper style1 align-center">
+		<section id="shade" class="wrapper style1 align-center">
 			<div class="inner">
 				<h2>OUR PROMISE TO YOU</h2>
 				<p>You have our promise that we will encourage our child to follow their dreams, support their choices and guide them along the way. We will provide them with stability, security and opportunity, but most of all, we will provide them with unconditional love and support through all of the joys and challenges life brings. We are so excited to create a close-knit family, just as we had when we were kids. We have so much to offer as dads and would be honored to have the opportunity to show you.  Thank you again for considering us. We look forward to meeting you.</p>
@@ -93,10 +94,15 @@
 
 
 			<!-- Gallery -->
-			<div class="gallery style2 medium lightbox onscroll-fade-in">
+			<div class="gallery style1 small lightbox onscroll-fade-in">
 				<article>
 					<a href="<%= asset_path 'rj-jeff-1-full.jpg' %>" class="image">
 						<img src="<%= asset_path 'rj-jeff-1-thumb.jpg' %>" alt="" />
+					</a>
+				</article>
+				<article>
+					<a href="<%= asset_path 'wedding2-large.jpg' %>" class="image">
+						<img src="<%= asset_path 'wedding2-thumb.jpg' %>" alt="" />
 					</a>
 				</article>
 				<article>
@@ -120,8 +126,13 @@
 					</a>
 				</article>
 				<article>
-					<a href="<%= asset_path 'rj-jeff-6-full.jpg' %>" class="image">
-						<img src="<%= asset_path 'rj-jeff-6-thumb.jpg' %>" alt="" />
+					<a href="<%= asset_path 'bw-large.jpg' %>" class="image">
+						<img src="<%= asset_path 'bw-thumb.jpg' %>" alt="" />
+					</a>
+				</article>
+				<article>
+					<a href="<%= asset_path 'wedding-large.jpg' %>" class="image">
+						<img src="<%= asset_path 'wedding-thumb.jpg' %>" alt="" />
 					</a>
 				</article>
 			</div>
@@ -176,12 +187,14 @@
 					<li><a href="https://www.facebook.com/rjandjeffadopting/?pnref=story.unseen-section" target="_blank" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="mailto: ronjhazen@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
-				<p>&copy; Scott Galetto Design, 2017</p>
+				<p class="byline">Made with ❤ by Scott Galetto</p>
 			</div>
 		</footer>
 
 	</div>
 
 <script>
-$('.signature').addClass('animated fadeInUp');
+$( document ).ready(function() {
+	$('.signature').addClass('animated fadeInUp');
+});
 </script>
